# learning_log

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
accounts/: urls.py  views.py
accounts/templates/registration/: login.html  register.html
learning_logs/: admin.py  models.py  urls.py  views.py
learning_logs/migrations/: 0001_initial.py  0002_entry.py  0003_topic_owner.py
learning_logs/templates/learning_logs/: 404.html  500.html  base.html  edit_entry.html  index.html  new_entry.html  new_topic.html  topic.html  topics.html
ll_project/: settings.py  urls.py
