[tool.poetry]
name = "learning-log"
version = "0.1.0"
description = "Learning log"
authors = ["ikari2k <pluta.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
django-bootstrap5 = "^23.4"
platformshconfig = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
